# Ylab_EXTask

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  alembic.ini  config.py  docker-compose-test.yml  docker-compose.yml  kafka.py  main.py  pyproject.toml  requirements.txt
docker_compose/: app.yaml  db.yaml  kafka.yaml  redis.yaml  zookeeper.yaml
source/api/cache/: decorators.py
source/api/caches/: cache.py  config.py  decorators.py
source/api/factories/: factory.py
source/api/handlers/: handler.py
source/api/repositories/: interfaces.py  repository.py  utils.py
source/api/routers/: dishes.py  menus.py  submenus.py
source/api/schems/: schemas.py
source/api/services/: service.py
source/db/: database.py  models.py
source/db/migrations/: env.py
source/db/migrations/versions/: 145a71468a4e_.py  5d37fcdc4e8f_initial_migrations.py  80b19f0a9687_initial_migrations.py  cde7316c2e71_initial_migrations.py
tests/: conftest.py  test_crud.py
tests/crud_tests/: conftest.py  test_cache.py  test_crud.py
