[tool.pytest.ini_options]
pythonpath = [
    ".", ".",
]

asyncio_mode = 'auto'

[tool.poetry]
name = "exylab"
version = "0.1.0"
description = "Example of standard Ylab Task"
authors = ["Yuriy Ilchuk <yuryilchuk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = {extras = ["full"], version = "^0.104.1"}
pytest = "^7.4.3"
sqlalchemy = "^2.0.23"
httpx = "^0.25.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
redis = "^5.0.1"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.5.0"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
